--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-backports.ssl-match-hostname>=3.2a3
-libxml2-python>=2.6.21
-pyOpenSSL>=0.13
-pytz
-pyxmlsec-next>=0.3.1
-suds-jurko>=0.6
-xmldsig>=0.2.1
+pyOpenSSL==20.0.1
+signxml==2.9.0
+suds==1.1.1
